5/23/2006 Bob Rossi <bob@brasko.net>

	* TODO: Fix bison TODO item.

5/21/2006 Bob Rossi <bob@brasko.net>

	* NEWS: Add note about fixed pty in NEWS file.

5/17/2006 Bob Rossi <bob@brasko.net>

	* NEWS: Add note about switching to SVN.

5/13/2006 Bob Rossi <bob@brasko.net>

	* config/readline_check_version.m4: Fix 'test' condition.
	* NEWS: Add entry for the above fix.

5/05/2006 Bob Rossi <bob@brasko.net>

	* TODO: Another suggestion by bluffer_.

5/03/2006 Bob Rossi <bob@brasko.net>

	* config/readline_check_version.m4 (RL_LIB_READLINE_INCLUDES): No
	longer check to see if add_history () is around. add_history () 
	will always be available if readline is available.
	Check for readline.h and readline/readline.h and return configure
	error if neither is available. Check for history.h and
	readline/history.h and return error if neither is available.

5/03/2006 Bob Rossi <bob@brasko.net>

	* TODO: More stuff todo.

4/27/2006 Bob Rossi <bob@brasko.net>

	* indent.sh: Added.
	* README: Describes use of indent.sh.

4/23/2006 Bob Rossi <bob@brasko.net>

	* autorelease.sh: Fix date added to ChangeLog's.

4/14/2006 Bob Rossi <bob@brasko.net>

	* Makefile.am (DIST_SUBDIRS): Added lib.

4/14/2006 Bob Rossi <bob@brasko.net>

	* autorelease.sh: Remove --enable-maintainer-mode.
	* configure.in (AM_MAINTAINER_MODE): Removed.

4/14/2006 Bob Rossi <bob@brasko.net>

	* configure.in (AC_INIT): Update version.

4/14/2006 Bob Rossi <bob@brasko.net>

	* README: Document better how to build CGDB.

4/14/2006 Bob Rossi <bob@brasko.net>

	* autoregen.sh: Call lib/gdbmi autoregen script also.
	* configure.in (AC_CONFIG_SBUDIRS): Add call to lib/gdbmi.
	(AC_OUTPUT): Remove lib/gdbmi/Makefile lib/gdbmi/src/Makefile.

4/14/2006 Bob Rossi <bob@brasko.net>

	* BRANCHES: Removed file.
	* TODO: Added, used to be RELEASE_TODO.
	* RELEASE_TODO: Removed.
	* FAQ: Quick fix.

4/14/2006 Bob Rossi <bob@brasko.net>

	* Removed all autoconf generated files from CVS.

4/13/2006 Bob Rossi <bob@brasko.net>
