@@ -1,3 +1,8 @@
+5/23/2006 Bob Rossi <bob@brasko.net>
+
+	* src/cgdb.c (GDB_SHELL_COMMAND): Removed variable.
+	(rlctx_send_user_command): Remove shell command functionality.
+
 5/21/2006 Bob Rossi <bob@brasko.net>
 
 	* src/cgdb.c (init_readline): Add new parameter to rline_initialize.
