@@ -1,5 +1,10 @@
 5/23/2006 Bob Rossi <bob@brasko.net>
 
+	* NEWS: CGDB no longer supports the shell command. It was never
+	released with this functionality however.
+
+5/23/2006 Bob Rossi <bob@brasko.net>
+
 	* TODO: Fix bison TODO item.
 
 5/21/2006 Bob Rossi <bob@brasko.net>
